Modify nginx configuration for new routing
Updated server configuration to use port 8000 and simplified routing.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,50 +2,10 @@ events {}
 
 http {
     server {
-        listen 8081;
+        listen 8000;
 
-        # ---- APP 1 ----
-        location /app_jsm0058 {
-            return 301 /app_jsm0058/;
-        }
-        location /app_jsm0058/ {
-            proxy_pass http://jsm0058:8081/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # ---- APP 2 ----
-        location /app_nrj0005 {
-            return 301 /app_nrj0005/;
-        }
-        location /app_nrj0005/ {
-            proxy_pass http://nrj0005:8081/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # ---- APP 3 ----
-        location /app_yra0005 {
-            return 301 /app_yra0005/;
-        }
-        location /app_yra0005/ {
-            proxy_pass http://yra0005:8081/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # ---- APP 4 ----
-        location /app_sov0002 {
-            return 301 /app_sov0002/;
-        }
-        location /app_sov0002/ {
-            proxy_pass http://sov0002:8081/;
+        location / {
+            proxy_pass http://app_sov0002:8001/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
