--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,28 @@
 version: "3.8"
 
 services:
-
-  app_jsm0058:
-    build: ./app_jsm0058
-    container_name: app_jsm0058
-    expose:
-      - "8081"
-    networks:
-      - webnet
-
-  app_nrj0005:
-    build: ./app_nrj0005
-    container_name: app_nrj0005
-    expose:
-      - "8081"
-    networks:
-      - webnet
-
-  app_yra0005:
-    build: ./app_yra0005
-    container_name: app_yra0005
-    expose:
-      - "8081"
-    networks:
-      - webnet
-
   app_sov0002:
     build: ./app_sov0002
     container_name: app_sov0002
-    expose:
-      - "8081"
+    ports:
+      - "8001:8001"  # Exponemos solo 8001
     networks:
       - webnet
+    environment:
+      - SECRETO=mi_valor_secreto
 
   nginx:
     image: nginx:latest
     container_name: nginx
     ports:
-      - "8081:80"
+      - "8000:8000"  # Puerto público
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro  
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
-      - app_jsm0058
-      - app_nrj0005
-      - app_yra0005
       - app_sov0002
     networks:
       - webnet
 
 networks:
   webnet:
+    driver: bridge
