Implement basic authentication in nginx.conf
Added basic authentication to the Nginx configuration.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,9 @@ http {
         listen 8000;
 
         location / {
+            auth_basic "Área protegida";
+            auth_basic_user_file /etc/nginx/.htpasswd;
+
             proxy_pass http://app_sov0002:8001/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -13,3 +16,4 @@ http {
         }
     }
 }
+
