--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,15 @@ services:
       - SECRETO=mi_valor_secreto
 
   nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "8000:8000"  # Puerto público
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - app_sov0002
-    networks:
-      - webnet
+  image: nginx:latest
+  container_name: nginx
+  ports:
+    - "8000:8000"
+  volumes:
+    - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    - ./nginx/.htpasswd:/etc/nginx/.htpasswd:ro
+  depends_on:
+    - app_sov0002
+  networks:
+    - webnet
 
-networks:
-  webnet:
-    driver: bridge
